# fs-tasks

./: .clippy.toml  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  deny.toml  package.toml
proto/: tasks.proto
src/: app.rs  cli.rs  controller.rs  grpc.rs  keys.rs  lib.rs  main.rs  model.rs  pipeline_editor.rs  rest.rs  store.rs  templates.rs  view.rs
tests/: task_test.rs
