[package]
name        = "fs-tasks"
description = "FreeSynergy Tasks — data offers, task builder and task templates"
version     = "0.1.0"
edition     = "2021"
license     = "MIT"
authors     = ["FreeSynergy.Net"]
repository  = "https://github.com/FreeSynergy/fs-tasks"

[lib]
name = "fs_tasks"
path = "src/lib.rs"

[[bin]]
name = "fs-tasks"
path = "src/main.rs"

[dependencies]
fs-render = { path = "../fs-render" }
fs-error  = { path = "../fs-libs/fs-error" }
fs-i18n   = { path = "../fs-i18n" }
serde     = { version = "1", features = ["derive"] }
toml      = { version = "1", features = ["preserve_order"] }
chrono    = { version = "0.4", features = ["serde"] }

async-trait        = "0.1"
thiserror          = "2"
tracing            = "0.1"
tokio              = { version = "1", features = ["full"] }

# gRPC
tonic = "0.12"
prost = "0.13"

# REST + OpenAPI
axum              = "0.7"
utoipa            = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
tower-http        = { version = "0.6", features = ["trace"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build         = "0.12"
protoc-bin-vendored = "3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
